# haddon

./: .gitignore  Cargo.toml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/demo/: index.html  package.json  vite.config.ts
apps/demo/src/: App.css  App.tsx
apps/web/: .cta.json  .env.example  components.json  drizzle.config.ts  package.json
apps/web/src/: routeTree.gen.ts
apps/web/src/components/layout/: rutabega.tsx
apps/web/src/components/ui/: upload-dropzone.tsx
apps/web/src/db/: client.ts  ensure.ts  schema.ts
apps/web/src/lib/: s3-client.ts  upload-router.ts
apps/web/src/routes/: api.books.$bookId.file.ts  api.upload.ts  books.$bookId.tsx  index.tsx
crates/core/: Cargo.toml
crates/core/examples/: inspect_spans.rs  test_real.rs
crates/core/src/: epub.rs  layout.rs  lib.rs  search.rs  types.rs
demo/: package.json
demo/src/: App.css  App.tsx
