[package]
name = "haddon-core"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
cosmic-text = "0.18"
thiserror = "2"

[dev-dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
